test: add test coverage for backend